<resources>
    <string name="app_name">Фитнес клуб "Ferrum"</string>
    <string name="sign_up_string">Зарегистрироваться</string>
    <string name="sign_up_string1">Регистрация</string>
    <string name="sign_in_string1">Авторизация</string>
    <string name="dont_have_account_string">Нет уч. записи</string>
    <string name="sign_in_string">Войти</string>
    <string name="have_account_string">Уже есть аккаунт</string>
    <string name="enter_details_string">Введите свои данные, чтобы продолжить</string>
    <string name="signIn_details_string">Зарегистрируйтесь, чтобы пользоваться приложением</string>
    <string name="manage_text_string">Управляйте своими тренировками</string>
    <string name="enjoy_reg_text">Наслаждайтесь процессом тренировки, и результаты не заставят себя долго ждать!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ferrum_name">Фитнес-клуб "Ferrum"</string>
    <string name="invite_text">Приглашаем на первую БЕСПЛАТНУЮ тренировку в наш клуб!</string>
    <string name="pavel_name">Павел Турчанинов</string>
    <string name="jason_name">Джейсон Стэтхэм</string>
    <string name="sarah_name">Сара Сампайо</string>
    <string name="trainer_text">Фитнес-тренер</string>
    <string name="manager_text">Директор</string>
    <string name="main_trainer_text">Главный тренер</string>
    <string name="accounting_text">Бухгалтер</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pavel_text">Провожу персональные тренировки в фитнес-клубе Ferrum, желающие потренироваться, привести свое тело в порядок и держать в тонусе пишите в личку в ВК.</string>
    <string name="VK_text"><a href="https://vk.com/dkhafizovi">Страница ВКонтакте</a></string>
    <string name="pavel_phone">+ 7 (999) 999-99-99</string>
    <string name="jason_text">Не важно, как именно тебя ударили, важно, что ты встал и смог ответить.</string>
    <string name="jason_phone">+ 7 (993) 155-13-11</string>
    <string name="jason_VK"><a href="https://vk.com/id374508870">Страница ВКонтакте</a></string>
    <string name="sarah_text">Вы можете добиться всего, чего хотите, если запишитесь на мои тренировки.</string>
    <string name="sarah_phone">+ 7 (993) 151-16-99</string>
    <string name="sarah_VK"><a href="https://vk.com/id374508870">Страница ВКонтакте</a></string>
    <string name="personal_text">Персональные тренировки</string>
    <string name="personal_text_pavel">Павел Турчанинов – от 2 500 р.</string>
    <string name="personal_text_jason">Джейсон Стэтхэм – от 2 999 р.</string>
    <string name="personal_text_sarah">Сара Сампайо – от 1000 р.</string>
    <string name="group_text">Групповые тренировки</string>
    <string name="group_text_jason">Джейсон Стэтхэм – от 10 000 р.</string>
    <string name="group_text_sarah">Сара Сампайо – от 2 500 р.</string>
    <string name="cycle_text">Сайкл тренировки</string>
    <string name="cycle_text_sarah">Сара Сампайо – от 2 500 р.</string>
    <string name="tennis_text">Настольный теннис</string>
    <string name="edit_text">Редактировать</string>
    <string name="personal_data_text">Личные данные</string>
    <string name="contact_details_text">Контактные данные</string>
    <string name="settings_text">Настройки</string>
    <string name="documents_text">Документы</string>
    <string name="surname_text">Фамилия</string>
    <string name="name_text">Имя</string>
    <string name="birthday_text">Дата рождения</string>
    <string name="email_text">Эл. почта</string>
    <string name="login_text">Логин</string>
    <string name="phone_text">Номер телефона</string>
    <string name="user_guide_text">Руководство пользователя</string>
    <string name="terms_of_use_text">Политику конфиденциальности</string>
    <string name="privacy_policy_text1">Политику конфиденциальности</string>
    <string name="privacy_policy_text2">Политика конфиденциальности</string>
    <string name="club_rules_text">Правила клуба</string>
    <string name="textStyle_text">Изменить стиль текста</string>
    <string name="chooseLang_text">Выберите язык:</string>
    <string name="chooseTheme_text">Выберите тему:</string>
    <string name="chooseStyle_text">Выберите стиль текста:</string>
    <string name="changePhoto_text">Изменить фото</string>
    <string name="apply_text">Применить</string>
    <string name="cancel_text">Отмена</string>
    <string name="home_text">на главную</string>
    <string name="password_text">Пароль</string>
    <string name="role_text">Роль</string>
    <string name="personal_information_text">Согласие на обработку персональных данных</string>
    <string name="accept_terms_text">Я принимаю Политику конфиденциальности и Согласие на обработку персональных данных</string>
    <string name="todo">TODO</string>
    <string name="or_text">или</string>
    <string name="services_text">Услуги</string>
    <string name="news_text">Новости</string>
    <string name="show_users_list_text">Показать список пользователей</string>
    <string name="trainers_text">Тренеры</string>


    <string-array name="languages">
        <item>Русский</item>
        <item>Английский</item>
    </string-array>

    <string-array name="feedback">
        <item>Отзыв</item>
        <item>Вопрос</item>
    </string-array>

    <string-array name="theme">
        <item>"Светлая тема"</item>
        <item>"Тёмная тема"</item>
    </string-array>

    <string-array name="style">
        <item>Русский</item>
        <item>Английский</item>
    </string-array>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="confirm_password">Подтвердить пароль</string>
    <string name="choose_date_text">Выберите дату</string>
    <string name="delete_employee">Удалить сотрудника</string>
    <string name="profile_text">Профиль</string>
    <string name="feed_back_text">Обратная связь</string>
    <string name="user_importance_text">Нам важно Ваше мнение</string>
    <string name="to_main_text">на главную</string>
    <string name="trainer_information">Информация о тренере</string>
    <string name="admin_btn_text">Кнопка для администратора</string>

</resources>