<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rect_card">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_image" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/name_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/user_image"
        app:layout_constraintStart_toEndOf="@id/user_image"/>

    <TextView
        android:id="@+id/user_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/surname_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/user_image"
        app:layout_constraintStart_toEndOf="@id/user_name"/>

    <TextView
        android:id="@+id/user_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/role_text"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/user_image"
        app:layout_constraintStart_toEndOf="@id/user_surname"/>

    <TextView
        android:id="@+id/user_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/birthday_text"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toEndOf="@id/user_image"/>

    <TextView
        android:id="@+id/user_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/phone_text"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toEndOf="@id/user_birthday"/>

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/email_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/user_image"
        app:layout_constraintStart_toEndOf="@id/user_image"/>




</androidx.constraintlayout.widget.ConstraintLayout>