<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".activities.EditProfileActivity">

    <RelativeLayout
        android:id="@+id/frame_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="45dp"
            android:src="@drawable/back_icon_profile"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frame_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_services"
        android:layout_marginTop="20dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/user_image"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:background="@drawable/default_image"
            android:scaleType="fitXY"
            app:riv_oval="true"/>

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/rotateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/frame_image"
        app:layout_constraintStart_toEndOf="@+id/frame_image"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_rotate"/>

    <Button
        android:id="@+id/edit_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changePhoto_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textStyle="normal"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_image" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/name_text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_image_btn" />

    <EditText
        android:id="@+id/new_name_ed"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:textColor="@color/black"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="15sp"
        android:background="@drawable/bg_profile_ed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_tv" />

    <TextView
        android:id="@+id/surname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/surname_text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_name_ed" />

    <EditText
        android:id="@+id/new_surname_ed"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="15sp"
        android:background="@drawable/bg_profile_ed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname_tv" />

    <TextView
        android:id="@+id/birthday_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/birthday_text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_surname_ed" />

    <EditText
        android:id="@+id/new_birthday_ed"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="15sp"
        android:inputType="none"
        android:focusable="false"
        android:background="@drawable/bg_profile_ed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_tv" />

    <TextView
        android:id="@+id/phone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/phone_text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_birthday_ed" />

    <EditText
        android:id="@+id/new_phone_ed"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="15sp"
        android:inputType="number"
        android:background="@drawable/bg_profile_ed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_tv"
        tools:ignore="TextFields" />


    <Button
        android:id="@+id/save_btn"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/apply_text"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_phone_ed" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/cancel_text"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>